Factcheck background processing
